Changes repos and shapes up role
Changed repos
Added tests
Include task file via main

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Michel Blanc
-  description: simple ppa-backed nodejs role
-  company: ERASME/Grand-Lyon Métropole
+  description: Simple odejs role
+  company: devopsworks
   license: MIT
   min_ansible_version: 1.8
 
