--- a/tasks/nodejs.yml
+++ b/tasks/nodejs.yml
@@ -4,7 +4,7 @@
 
 - name: Adds node repos
   apt_repository:
-    repo: "deb https://deb.nodesource.com/node_7.x {{ ansible_distribution_release }} main"
+    repo: "deb https://deb.nodesource.com/node_{{ node_major_version }}.x {{ ansible_distribution_release }} main"
     update_cache: yes
 
 - name: Installs nodejs
